--- a/index.html
+++ b/index.html
@@ -28,11 +28,13 @@
    <br><br>
     <div class="button-book">
       <h3>if you have any question contact us direcly</h3>
-      <br>
       <a
         class="btn"
         href="https://api.whatsapp.com/send?phone=+393898883634&text=hi if you need more info send a message ...."
         ><i class="fa-brands fa-whatsapp"></i> </a>
+    </div>
+    <div class="important">
+      <h3>IMPORTANT once you're inside the room. You have to send us your documents to complete the registration due to Italian Law</h3>
     </div>
   </body>
 </html>
