--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 
     <h3>All steps you need to follow for check-in</h3>
 
-    <video controls="controls">
-      <source src="check-in.mp4" type="video/mp4" />
+    <video controls="controls" onloadstart="this.volume=0.1">
+      <source src="check-in1.mp4" type="video/mp4" />
     </video>
    
     </div>
