--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
         ><i class="fa-brands fa-whatsapp"></i> </a>
     </div>
     <div class="important">
-      <h3>'IMPORTANT' Before sending the code.
-According to Italian law I have to register you on the portal dedicated to tourists, and for this I will need everyone's passport photos, which you can send me on Aibnb or even on WhatsApp
+      <h3>'IMPORTANT' Before sending the code,
+According to Italian law I have to register you on the portal dedicated to tourists, and for this I will need everyone's passport photos, which you can send me on Aibnb/Booking or even on WhatsApp
 </h3>
     </div>
   </body>
