--- a/index.html
+++ b/index.html
@@ -27,15 +27,14 @@
     </div>
    <br><br>
     <div class="button-book">
-      <h3>if you have any question contact us direcly</h3>
+      <h3>If you have any question contact us direcly</h3>
       <a
         class="btn"
         href="https://api.whatsapp.com/send?phone=+393898883634&text=Hi if you need more info send a message ...."
         ><i class="fa-brands fa-whatsapp"></i> </a>
     </div>
     <div class="important">
-      <h3>'IMPORTANT' Before sending the code,
-According to Italian law I have to register you on the portal dedicated to tourists, and for this I will need everyone's passport photos, which you can send me on Aibnb/Booking or even on WhatsApp
+      <h3>'IMPORTANT' <br>Before sending the code, According to Italian law I have to register you on the portal dedicated to tourists, and for this I will need everyone's passport photos, which you can send me on Aibnb/Booking or even on WhatsApp
 </h3>
     </div>
   </body>
