--- a/index.html
+++ b/index.html
@@ -23,6 +23,21 @@
     <video controls="controls" onloadstart="this.volume=0.1">
       <source src="check-in4.mp4" type="video/mp4" />
     </video>
+
+
+    <hr>
+    <div class="main-door">
+      <!-- Link che apre porta giu -->
+       <h3>Send text message here to open Main Door</h3>
+
+<a href="sms:+393898883634?body=Ciao%20da%20me" class="sms-btn">SMS Main Door</a>
+<br><br>
+    <!-- Link che apre porta su -->
+      <h3>Send text message here to open Apartement Door</h3>
+<a href="sms:+393898883634?body=Ciao%20da%20me" class="sms-btn">SMS Ap. Door</a>
+    </div>
+    <br>
+    <hr>
    
     </div>
    <br><br>
