--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
       <!-- Link che apre porta giu -->
        <h3>Send text message here to open Main Door</h3>
 
-<a href="sms:+393898883634?body=Ciao%20da%20me" class="sms-btn">SMS Main Door</a>
+<a href="sms:+393898883634?body=Main%21220" class="sms-btn">SMS Main Door</a>
 <br><br>
     <!-- Link che apre porta su -->
-      <h3>Send text message here to open Apartement Door</h3>
-<a href="sms:+393898883634?body=Ciao%20da%20me" class="sms-btn">SMS Ap. Door</a>
+      <h3>Send text message here to open Apartment Door</h3>
+<a href="sms:+393898883634?body=Apt%20212" class="sms-btn">SMS Apt. Door</a>
     </div>
     <br>
     <hr>
