--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
 <a href="sms:+393898883634?body=Main21220" class="sms-btn">SMS Main Door</a>
 <br><br>
     <!-- Link che apre porta su -->
-      <h3>Send text message here to open Apartment Door</h3>
+      <!-- <h3>Send text message here to open Apartment Door</h3>
 <a href="sms:+393898883634?body=Apt20212" class="sms-btn">SMS Apt. Door</a>
-<br><br>
+<br><br> -->
     </div>
     
    
