--- a/index.html
+++ b/index.html
@@ -28,14 +28,16 @@
 
     <div class="main-door">
       <!-- Link che apre porta giu -->
-       <h3>Send text message here to open Main Door</h3>
+       <h3>Click here to open Main Door</h3>
 
-<a href="sms:+393898883634?body=Main21220" class="sms-btn">SMS Main Door</a>
-<br><br>
-    <!-- Link che apre porta su -->
-      <!-- <h3>Send text message here to open Apartment Door</h3>
-<a href="sms:+393898883634?body=Apt20212" class="sms-btn">SMS Apt. Door</a>
+       
+   <button id="btnAccendi">Open Main Door</button>
+  <pre id="log"></pre>
+
+<!-- <a href="sms:+393898883634?body=Main21220" class="sms-btn">SMS Main Door</a>
 <br><br> -->
+
+<br><br>
     </div>
     
    
@@ -53,4 +55,5 @@
 </h3>
     </div>
   </body>
+  <script src="app.js"></script>
 </html
