--- a/index.html
+++ b/index.html
@@ -28,12 +28,17 @@
 
     <div class="main-door">
       <!-- Link che apre porta giu -->
-       <h3>Click here to open Main Door</h3>
+          <h3>Click here to open Main Door</h3> 
+    <button id="MainDoor">Main Door</button>
+    <div id="log1"></div>
 
-       
-   <button id="btnAccendi">Open Main Door</button>
-  <pre id="log"></pre>
+    <br>
 
+     <h3>Click here to open Apt. Door</h3>
+
+    <button id="AptDoor">Apt. Door</button>
+    <div id="log2"></div>
+   
 <!-- <a href="sms:+393898883634?body=Main21220" class="sms-btn">SMS Main Door</a>
 <br><br> -->
 
