--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
     <br>
 
-     <h3>Click here to open Apt. Door</h3>
+     <h3 id="AptDoor">Click here to open Apt. Door</h3>
 
     <button id="AptDoor">Apt. Door</button>
     <div id="log2"></div>
