--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 
     <div class="container">
-     <h3 id="authCodeh3">Enter authorization code to access Door Controls:</h3>
+     <h3 id="authCodeh3">Enter authorization Code to Access Door Controls:</h3>
      <input type="password" id="authCode" placeholder="Enter the Code we sent you!" />
      <button id="btnCheckCode">Verifica Codice</button>
 
