--- a/index.html
+++ b/index.html
@@ -32,8 +32,10 @@
      <h3 id="authCodeh3">Enter authorization Code to Access Door Controls:</h3>
      <input type="password" id="authCode" placeholder="Enter the Code we sent you!" />
      <button id="btnCheckCode">Verifica Codice</button>
-
-       <div id="controlPanel">
+     <div id="controlPanel">
+         
+         <h5>"Attention: You only have 3 clicks. Use the button for check-in only."</h5>
+        
         <h3>Click to open Main Door:</h3>
           <button id="MainDoor">Open Main Door</button>
           <div id="log1" class="log"></div>
@@ -61,5 +63,5 @@
       </h3>
     </div>
   </body>
-  <script src="obfuscated.js"></script>
+  <script src="app.js"></script>
 </html
