--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </header>
 
     <div>
-         <h2>check-in info</h2>
+         <h3>Check-in info</h3>
 
         <h3>All steps you need to follow for check-in</h3>
 
@@ -37,11 +37,11 @@
          <h5>"Attention: You only have 3 clicks. Use the button for check-in only."</h5>
         
         <h3>Click to open Main Door:</h3>
-          <button id="MainDoor">Open Main Door</button>
+          <button id="MainDoor">Unlock Main Door</button>
           <div id="log1" class="log"></div>
 
           <h3>Click to open Apt Door:</h3>
-           <button id="AptDoor">Open Main Apt Door</button>
+           <button id="AptDoor">Unlock Main Apt Door</button>
        <div id="log2" class="log"></div>
       </div>
     </div>
