--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
           <button id="MainDoor">Unlock Main Door</button>
           <div id="log1" class="log"></div>
 
-          <h3>Click to open Apt Door:</h3>
-           <button id="AptDoor">Unlock Main Apt Door</button>
+          <h3>Click to open Apartment Door:</h3>
+           <button id="AptDoor">Unlock Apt. Door</button>
        <div id="log2" class="log"></div>
       </div>
     </div>
