--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
 
     <div>
          <h3>Check-in info</h3>
-
         <h3>All steps you need to follow for check-in</h3>
 
        <video controls="controls" onloadstart="this.volume=0.1">
@@ -67,14 +66,14 @@
 
 
        <br><br>
-     <div class="button-book">
+     <div class="button-book" id="button-book">
        <h3>If you have any question contact us direcly</h3>
         <a
           class="btn"
           href="https://api.whatsapp.com/send?phone=+393898883634&text=Hi if you need more info send a message ...."
         ><i class="fa-brands fa-whatsapp"></i> </a>
     </div>
-    <div class="important">
+    <div class="important" id="important">
       <h3>'IMPORTANT' <br>Before sending the code, According to Italian law I have to register you on the portal dedicated to tourists, and for this I will need everyone's passport photos, which you can send me on Aibnb/Booking or even on WhatsApp
       </h3>
     </div>
