--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
      <button id="btnCheckCode">Submit</button>
      <div id="controlPanel">
          
-         <h5>"Attention: You only have 3 clicks. Use the button for check-in only."</h5>
+         <h5>"ATTENTION: You only have 3 clicks. Use the button for check-in only."</h5>
         
         <h3>Click to open Main Door:</h3>
           <button id="MainDoor">Unlock Main Door</button>
