--- a/index.html
+++ b/index.html
@@ -70,11 +70,11 @@
           <br>
             <div class="warning-box" id="warning-box">
             <h5><i class="fas fa-exclamation-triangle"></i> Limited Access</h5>
-            <p>
-  Each button can be used a maximum of <strong>2 times</strong>.  
-  Please use it only for check-in. <br><br>  
-  Access will automatically expire 12 hours after the first click.
-</p>
+              <p>
+                Each button can be used a maximum of <strong>2 times</strong>.  
+                Please use it only for check-in. <br><br>  
+                Access will automatically expire 12 hours after the first click.
+              </p>
           </div>
           
           <!-- <div class="status-bar">
@@ -157,6 +157,7 @@
 
 
 <footer class="footer">
+  <button class="admin-toggles">⚙️</button>
   <p>© 2025 MusArt - All rights reserved</p>
   <button id="toggleAdmin" class="admin-toggle">⚙️</button>
 </footer>
