--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
 
             <br /><br />
             <!-- buttoni extra-->
-            <h3>Gestione Porte Extra</h3>
+            <!-- <h3>Gestione Porte Extra</h3>
             <div>
               <input type="checkbox" id="extraDoor1Visible" /> Mostra Extra Door
               1
@@ -326,7 +326,7 @@
             <br />
             <button id="btnExtraDoorsVisibility" class="btn">
               Applica Visibilità
-            </button>
+            </button> -->
           </div>
         </div>
       </div>
