--- a/index.html
+++ b/index.html
@@ -37,12 +37,13 @@
     </div>
 
     <div class="container">
-      <div class="header">
+     
+
+      <div class="card fade-in">
+         <div class="header">
         <h1 class="logo">MusArt</h1>
         <!-- <div class="subtitle">Check-in Information</div> -->
       </div>
-
-      <div class="card fade-in">
         <div class="card-title">
           <i class="fas fa-door-open"></i>
           Check-in Guide
@@ -58,7 +59,7 @@
 
       <div class="card fade-in" id="test2">
         <div class="auth-container">
-          <div class="card-title">
+          <div class="card-title1">
             <i class="fas fa-key"></i>
             Door Access
           </div>
@@ -208,8 +209,8 @@
           WhatsApp.
         </p>
       </div>
-
-      <div class="card">
+      <br>
+      <div class="">
         <div class="contact-section">
           <h3>Need Assistance?</h3>
           <p>Contact us directly for support</p>
@@ -314,7 +315,7 @@
 
             <br /><br />
             <!-- buttoni extra-->
-            <!-- <h3>Gestione Porte Extra</h3>
+            <h3>Gestione Porte Extra</h3>
             <div>
               <input type="checkbox" id="extraDoor1Visible" /> Mostra Extra Door
               1
@@ -326,7 +327,7 @@
             <br />
             <button id="btnExtraDoorsVisibility" class="btn">
               Applica Visibilità
-            </button> -->
+            </button>
           </div>
         </div>
       </div>
