--- a/index.html
+++ b/index.html
@@ -315,19 +315,19 @@
 
             <br /><br />
             <!-- buttoni extra-->
-            <h3>Gestione Porte Extra</h3>
-            <div>
-              <input type="checkbox" id="extraDoor1Visible" /> Mostra Extra Door
-              1
-            </div>
-            <div>
-              <input type="checkbox" id="extraDoor2Visible" /> Mostra Extra Door
-              2
-            </div>
-            <br />
-            <button id="btnExtraDoorsVisibility" class="btn">
-              Applica Visibilità
-            </button>
+             <h3>Gestione Porte Extra</h3>
+          <div>
+            <input type="checkbox" id="extraDoor1Visible" /> Mostra Extra Door
+            1
+          </div>
+          <div>
+            <input type="checkbox" id="extraDoor2Visible" /> Mostra Extra Door
+            2
+          </div>
+          <br />
+          <button id="btnExtraDoorsVisibility" class="btn">
+            Applica Visibilit
+          </button>
           </div>
         </div>
       </div>
