--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
 
             <br /><br />
             <!-- buttoni extra-->
-            <h3>Gestione Porte Extra</h3>
+            <!-- <h3>Gestione Porte Extra</h3>
             <div>
               <input type="checkbox" id="extraDoor1Visible" /> Mostra Extra Door
               1
@@ -345,7 +345,7 @@
             <button id="btnExtraDoorsVisibility" class="btn">
               Applica Visibilit
             </button>
-          </div>
+          </div> -->
 
           <!-- Nuova sezione per orario di check-in -->
           <div class="admin-section">
