reset overlay remotly

--- a/admin.html
+++ b/admin.html
@@ -235,6 +235,12 @@
                     <button id="btnResetLocalSession" class="btn btn-warning">
                         <i class="fas fa-sync-alt"></i> Ripristina Sessione Locale
                     </button>
+                    <br> <br>
+                    <div class="warning-box1">
+                        <i class="fas fa-exclamation-triangle"></i>
+                        <strong>Attenzione:</strong> Questa azione sblocca e riapre i link per tutti, ridando accesso (se hai cambiatto il codice al utenti servira il nuovo codice) .
+                    </div>
+                    <button id="btnResetSessions" class="btn btn-warning1" ><i class="fas fa-sync-alt"></i> Ripristina Tutte Sessione</button>
                     <div id="localResetResult" class="reset-result"></div>
                 </div>
 
