--- a/admin.html
+++ b/admin.html
@@ -19,21 +19,30 @@
     <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-auth-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-database-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>
+
   </head>
   <body>
     <div id="loginModal" class="login-modal">
       <div class="login-container">
         <h2><i class="fas fa-lock"></i> Accesso Amministratore</h2>
-        <p>Inserisci la password per accedere al pannello di controllo</p>
+        <p>Accedi con email e password</p>
+        <input
+          type="email"
+          id="adminEmail"
+          class="login-input"
+          placeholder="Email amministratore"
+          autocomplete="username"
+        />
         <input
           type="password"
           id="adminPassword"
           class="login-input"
           placeholder="Password"
-          autocomplete="off"
+          autocomplete="current-password"
         />
         <div id="loginError" class="login-error">
-          <i class="fas fa-exclamation-circle"></i> Password errata
+          <i class="fas fa-exclamation-circle"></i> Credenziali non valide
         </div>
         <button id="btnLogin" class="btn">
           <i class="fas fa-sign-in-alt"></i> Accedi
@@ -45,6 +54,11 @@
         <div class="admin-header">
             <h1><i class="fas fa-cogs"></i> Pannello di Amministrazione</h1>
             <p>Gestisci le impostazioni del sistema di check-in</p>
+            <div>
+              <button id="btnLogout" class="btn btn-secondary" style="margin-top:8px">
+                <i class="fas fa-sign-out-alt"></i> Esci
+              </button>
+            </div>
         </div>
 
         <div class="admin-content">
