--- a/admin.html
+++ b/admin.html
@@ -52,7 +52,7 @@
 
     <div class="admin-container" id="adminContainer">
         <div class="admin-header">
-            <h1><i class="fas fa-cogs"></i> Pannello di Amministrazione</h1>
+            <h1><i class="fas fa-cogs"></i> Admin-area</h1>
             <p>Gestisci le impostazioni del sistema di check-in</p>
             <div>
               <button id="btnLogout" class="btn btn-secondary" style="margin-top:8px">
