--- a/admin.html
+++ b/admin.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>N0-key - Admin Panel</title>
+    <title>MusArt - Admin Panel</title>
     <link rel="stylesheet" href="style1.css?v=3.0" />
     <link
       rel="stylesheet"
@@ -15,6 +15,7 @@
       href="https://fonts.googleapis.com/css2?family=Circular,-apple-system,BlinkMacSystemFont,Roboto,Helvetica Neue,sans-serif&display=swap"
       rel="stylesheet"
     />
+     <link rel="icon" type="image/x-icon" href="N0-key.ico">
     <!-- Aggiungi questi script nell'head di admin.html -->
     <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-auth-compat.js"></script>
@@ -208,7 +209,7 @@
             <input
               type="number"
               id="linkUsage"
-              value="10"
+              value="5"
               min="1"
               max="10"
               class="login-input"
@@ -229,7 +230,7 @@
 
           <div class="input-group">
             <label for="generatedSecureLink">Link sicuro generato</label>
-            <input
+            <input class="a12"
               type="text"
               id="generatedSecureLink"
               readonly
@@ -398,6 +399,6 @@
       </div>
     </div>
 
-    <script defer src="admin.js?v=3.0"></script>
+    <script defer src="admin.obf.js?v=3.0"></script>
   </body>
 </html>
