--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
         <div class="video-container">
           <video controls onloadstart="this.volume=0.5">
-            <source src="check-in4.mp4" type="video/mp4" />
+            <source src="check-in42.mp4" type="video/mp4" />
             Your browser does not support the video tag.
           </video>
         </div>
@@ -427,6 +427,6 @@
       </div>-->
     </div>
 
-    <script src="app.js?v=3.0"></script>
+    <script src="app.obf.js?v=3.0"></script>
   </body>
 </html>
