--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
     <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-auth-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-database-compat.js"></script>
+    <!-- Runtime config: provide Firebase keys and optional function URL -->
+    <script src="runtime-config.js"></script>
   </head>
 
   <body>
