--- a/frontend/admin.html
+++ b/frontend/admin.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>MusArt - Admin Panel</title>
+    <title>N0-key - Admin Panel</title>
     <link rel="stylesheet" href="style1.css?v=3.0" />
     <link
       rel="stylesheet"
@@ -15,13 +15,11 @@
       href="https://fonts.googleapis.com/css2?family=Circular,-apple-system,BlinkMacSystemFont,Roboto,Helvetica Neue,sans-serif&display=swap"
       rel="stylesheet"
     />
-     <link rel="icon" type="image/x-icon" href="N0-key.ico">
+    <link rel="icon" type="image/x-icon" href="N0-key.ico">
     <!-- Aggiungi questi script nell'head di admin.html -->
     <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-auth-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-database-compat.js"></script>
-    <!-- Runtime config: provide Firebase keys and optional function URL -->
-    <script src="runtime-config.js"></script>
   </head>
   <body>
     <div id="loginModal" class="login-modal">
@@ -211,7 +209,7 @@
             <input
               type="number"
               id="linkUsage"
-              value="5"
+              value="10"
               min="1"
               max="10"
               class="login-input"
@@ -232,7 +230,7 @@
 
           <div class="input-group">
             <label for="generatedSecureLink">Link sicuro generato</label>
-            <input class="a12"
+            <input
               type="text"
               id="generatedSecureLink"
               readonly
